--- a/examples/contracts/ERC1155/ERC1155/erc_1155/Cargo.toml
+++ b/examples/contracts/ERC1155/ERC1155/erc_1155/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "sol_2_ink_generated"
-version = "0.1.0"
+name = "erc_1155"
+version = 2.0.0-beta"
 edition = "2021"
 authors = ["Sol2Ink"]
 
